--- a/que-filme/sass/1-base/_variables.sass
+++ b/que-filme/sass/1-base/_variables.sass
@@ -1,10 +1,11 @@
-$primary-color: #D10024
-$secundary-color: #ff7300
-$light-color: #FFF
-$dark-color: #333
-$text-color: #B9BABC
+$primary-color: #E2B616
+$secundary-color: #fff
+//$light-color: #fff
+//$dark-color: #333
+//$text-color: #fff
 
-$bg-color: #15161D
-$secondary-bg-color: #1E1F29
-$section-bg-color: #E4E7ED
-$link-color: #2B2D42
+$bg-color: #000
+$secondary-bg-color: #151515
+//$section-bg-color: #E4E7ED
+//$link-color: #2B2D42
+$container-width: 1220px
