--- a/que-filme/sass/1-base/_variables.sass
+++ b/que-filme/sass/1-base/_variables.sass
@@ -5,7 +5,7 @@ $secundary-color: #fff
 //$text-color: #fff
 
 $bg-color: #000
-$secondary-bg-color: #151515
+$secondary-bg-color: #1a1a1a
 //$section-bg-color: #E4E7ED
 //$link-color: #2B2D42
 $container-width: 1220px
