--- a/que-filme/sass/2-layouts/_section.sass
+++ b/que-filme/sass/2-layouts/_section.sass
@@ -1,9 +1,6 @@
 @use '../1-base/variables'
 @use 'layouts-mixins'
-
-section
-    @include layouts-mixins.center-content
-    flex-direction: column
+@use '../1-base/base-mixins'
 
 .section-main-div
     max-width: variables.$container-width
@@ -13,6 +10,10 @@ section
         font-size: 3rem
         padding-top: 1rem
         padding-bottom: 4rem
+        text-align: center
+        @include base-mixins.mobile
+            padding-top: 6rem
+            padding-bottom: 1rem
 
 .catalog
     @include layouts-mixins.center-content
@@ -20,7 +21,7 @@ section
     flex-wrap: wrap
 
     &-movies
-        padding: 6rem 2rem
+        padding: 3rem 2rem
 
     &-poster
         width: 12rem
@@ -74,5 +75,13 @@ section
         padding: 1rem
         font-size: 1.3rem
 
+    @include base-mixins.tablet
+        width: 20rem
+        img
+            width: 20rem
+
 .p-justified
     text-align: justify
+
+.align-center
+    text-align: center
